<resources>
    <string name="app_name">Finger Fight</string>
    <string name="start">Start game</string>
    <string name="quit">Quit the game</string>
    <string name="tap">Tap</string>
    <string name="tutorial">To reach the victory you have to score max amount of points first! Tap on your own field when both fields will turn to orange.</string>
    <string name="tapToContinue">Tap to continue>>></string>
    <string name="max_score">Max score:</string>
    <string name="increase">▲</string>
    <string name="goBack">Go to main menu</string>
    <string name="reduce">▼</string>
    <string name="settings">Settings</string>
    <string name="apply">Apply</string>

</resources>
