<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context="com.example.kolot.fingerfight.main.MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_margin="70dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleText"
        android:layout_marginTop="75dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_centerHorizontal="true"
        android:background="@color/border"
        android:text="@string/start"
        android:textSize="26dp" />

    <Button
        android:id="@+id/end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@color/border"
        android:text="@string/quit"
        android:textSize="26dp" />

    <Button
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/start"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:background="@color/border"
        android:text="@string/settings"
        android:textSize="26dp" />


</RelativeLayout>
