<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context="com.example.kolot.fingerfight.inBetween.SettingsActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/apply"
        android:layout_alignStart="@+id/apply"
        android:layout_above="@id/apply"
        android:layout_marginBottom="200dp"
        android:text="@string/max_score"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/max_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignEnd="@+id/increase"
        android:layout_alignLeft="@+id/reduce"
        android:layout_alignRight="@+id/increase"
        android:layout_alignStart="@+id/reduce"
        android:layout_alignTop="@+id/textView"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/increase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/max_score"
        android:layout_alignRight="@+id/apply"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/border"
        android:text="@string/increase"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/reduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/apply"
        android:layout_below="@+id/max_score"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/border"
        android:text="@string/reduce"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@color/border"
        android:text="@string/apply"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />


</RelativeLayout>
